--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,13 +2,20 @@
 <html>
 <head>
   <title>FoodBlog</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <div class="container">
+     <ul class="nav nav-tabs">
 
-<%= yield %>
+     </ul>
+
+     
+       <%= yield %>
+   </div>
 
 </body>
 </html>
