1 posts complete edit and delete testing

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,8 +1,6 @@
-<h1><%= (@wiki.title) %></h1>
-<p><%= (@wiki.body) %></p>
+<h1><%= (@post.title) %></h1>
+<p><%= (@post.body) %></p>
 
 <p class="date">
   Submitted <%= time_ago_in_words(@post.created_at) %> Ago
 </p>
-
-<p class="body"></p>
