--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,16 @@
      <ul class="nav nav-tabs">
 
      </ul>
+     <div class="pull-right user-info">
+          <% if current_user %>
+          Hello <%= current_user.name %>! <%= link_to "Sign out", destroy_user_session_path, method: :delete %>
+          <% else %>
+            <%= link_to "Sign In", new_user_session_path %> or
+          <% end %>
+      </div>
 
-     
+     <p class="notice"><%= notice %></p>
+     <p class="alert"><%= alert %></p>
        <%= yield %>
    </div>
 
