--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,3 +15,9 @@
  */
   @import "bootstrap-sprockets";
   @import "bootstrap";
+
+
+  html, body {
+  	font-family: 'Titillium Web', sans-serif;
+    letter-spacing: .15rem;
+  }
