attachments added with Paperclip Gem

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,22 +10,27 @@
 </head>
 <body>
   <div class="container">
-    <img src="app/assets/images/foodSyntaxLogo.svg">
+    <div class="logo">
+      <%= image_tag "logo.svg" %>
+    </div>
+
      <ul class="nav nav-tabs">
 
      </ul>
+
      <div class="pull-right user-info">
           <% if current_user %>
           Hello <%= current_user.name %>! <%= link_to "Sign out", destroy_user_session_path, method: :delete %>
           <% else %>
-            <%= link_to "Sign In", new_user_session_path %> or
+            <%= link_to "Sign In", new_user_session_path %>
           <% end %>
       </div>
 
-     <p class="notice"><%= notice %></p>
-     <p class="alert"><%= alert %></p>
+       <p class="notice"><%= notice %></p>
+       <p class="alert"><%= alert %></p>
        <%= yield %>
    </div>
+   <footer>RSVision Design and Development 2016</footer>
 
 </body>
 </html>
