--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -21,3 +21,31 @@
   	font-family: 'Titillium Web', sans-serif;
     letter-spacing: .15rem;
   }
+
+  .container > .logo {
+    margin: 1.5rem;
+  }
+
+  .media {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 75%;
+  }
+
+  h1 {
+    text-align: center;
+    margin-bottom: 3rem;
+  }
+
+  a {
+    color: rgb(255, 6, 6)
+  }
+
+  footer {
+    width: 100%;
+    bottom: 0;
+    padding: 2rem;
+    margin-top: 20%;
+    text-align: center;
+  }
