--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -2,7 +2,10 @@
 
 <div class"row">
   <div class="col-md-8">
-    <%= form_for :post, url: posts_path do |f| %>
+    <%= form_for :post, url: posts_path, html: { multipart: true } do |f| %>
+     <div class="form-group">
+       <%= f.file_field :picture %>
+     </div>
       <div class="form-group">
         <%= f.label :title %>
         <%= f.text_field :title, class: 'form control', placeholder: "Enter title" %>
