updated wo .env

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,11 +11,11 @@
 <body>
   <div class="container">
     <div class="logo">
-      <%= image_tag "logo.svg" %>
+      <%= image_tag "logo.svg"%>
     </div>
 
      <ul class="nav nav-tabs">
-
+  			<li><%= link_to "Home", root_path %></li>
      </ul>
 
      <div class="pull-right user-info">
