--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,6 +15,7 @@
  */
   @import "bootstrap-sprockets";
   @import "bootstrap";
+  @import "normalize";
 
 
   html, body {
@@ -26,11 +27,21 @@
     margin: 1.5rem;
   }
 
-  .media {
+  .container-body {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 75%;
+    width: 70%;
+    background-color: rgba(237,237,237, .4);
+    padding: 3.5rem;
+    border-radius: 3px;
+    max-width: 1080px;
+  }
+
+  @media(max-width: 800px) {
+    .container-body {
+      width: 98%;
+    }
   }
 
   h1 {
@@ -39,13 +50,44 @@
   }
 
   a {
-    color: rgb(255, 6, 6)
+    color: rgb(255, 6, 6);
+  }
+
+  a:hover {
+    color: rgb(255, 10, 10);
+  }
+
+  .nav-tabs > li > a:hover {
+    background: rgb(255, 6, 6);
+    color: rgb(255, 255, 255);
+    border-radius: 3px;
+  }
+
+  .image-tagged {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  a.btn.btn-success, a.btn.btn-danger {
+    background: transparent;
+    color: rgb(255, 10, 10);
+    border: none;
+    font-size: 1.2rem;
+  }
+
+  input {
+    background: transparent;
+    color: rgb(255, 10, 10);
+    border: none;
+    font-size: 1.2rem;
   }
 
   footer {
     width: 100%;
     bottom: 0;
-    padding: 2rem;
-    margin-top: 20%;
+    padding: 4rem;
+    margin-top: 30%;
     text-align: center;
+    background-color: rgba(237,237,237, .4);
   }
