--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
 
      <ul class="nav nav-tabs">
   			<li><%= link_to "Home", root_path %></li>
+        <li><%= link_to "About", about_path %></li>
      </ul>
 
      <div class="pull-right user-info">
