--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,13 +1,10 @@
 <div class="container-body">
   <div class="row">
-    <div class="col-md-8">
       <h1 class="title"><%= (@post.title) %></h1>
+      <div><%= image_tag @post.picture.url(:medium), class: 'image-tagged' %></div>
       <p class="body"><%= (@post.body) %></p>
-      <div class="image-tagged"><%= image_tag @post.picture.url(:medium) %></div>
-
       <p class="date">
         Submitted <%= time_ago_in_words(@post.created_at) %> Ago
       </p>
-    </div>
   </div>
 </div>
