--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -59,6 +59,12 @@
     margin-left: auto;
     margin-right: auto;
     align-content: center;
+    margin-bottom: 2.5rem;
+  }
+
+  p.body {
+    margin-top: 1rem;
+    margin-bottom: 4rem;
   }
 
   input.btn.btn-success,
@@ -77,6 +83,27 @@
     color: rgb(255, 255, 255);
     border-radius: 1.5em;
   }
+
+  input[type="text"], input[type="email"], input[type="password"], input[type="title"], textarea {
+		width: 80%;
+		border: 1px solid rgb(30, 30, 30);
+		border-radius: .35em;
+		margin-top: 10px;
+		padding: .5em 1em;
+		line-height: 1.75;
+	}
+
+  textarea#post_body.form-control, {
+    border: 1px solid rgb(30, 30, 30);
+    border-radius: .35em;
+		margin-top: 10px;
+		padding: .5em 1em;
+		line-height: 1.75;
+  }
+
+	input[type="text"] {
+		height: 35px;
+	}
 
   textarea {
    resize: none;
