markup complete along with css

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -81,14 +81,15 @@
   input.btn.btn-success:hover,
   a.btn.btn-success:hover,
   a.btn.btn-danger:hover {
-    background-color: transparent;
-    border-radius: 7px;
+    background-color: rgb(255, 6, 6);
+    border-radius: 4px;
+    color: rgb(255, 255, 255);
     border: 1px solid rgb(255, 6, 6);
   }
 
   input[type="text"], input[type="email"], input[type="password"], input[type="title"], textarea {
 		width: 80%;
-		border: 1px solid rgb(30, 30, 30);
+		border: 1px solid rgba(30, 30, 30, .3);
 		border-radius: 4px;
 		margin-top: 10px;
 		padding: .5em 1em;
@@ -100,7 +101,7 @@
   }
 
   textarea#post_body.form-control, {
-    border: 1px solid rgb(30, 30, 30);
+    border: 1px solid rgba(30, 30, 30, .3);
     border-radius: 4px;
 		margin-top: 10px;
 		padding: .5em 1em;
