tag line change

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container-body">
-    <h1>A Food Blog created by a Ruby on Rails Developer</h1>
+    <h1>A Recipe Blog created with Ruby on Rails</h1>
     <% @posts.each do |post| %>
       <div class="row">
         <div class="col-md-8">
