precompile and CSS along with image fixes

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -62,8 +62,21 @@
     margin-right: auto;
     align-content: center;
     margin-bottom: 2.5rem;
+    height: auto;
+    width: 60%;
   }
 
+  @media(max-width: 800px) {
+    .image-tagged {
+      width: 65%;
+    }
+  }
+
+  @media(max-width: 600px) {
+    .image-tagged {
+      width: 95%;
+    }
+  }
   p.body {
     margin-top: 1rem;
     margin-bottom: 4rem;
