fixes and readme update

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -5,7 +5,8 @@
       <p class="body"><%= markdown (@post.body) %></p>
       <p class="date">
         <br />
-        Submitted <%= time_ago_in_words(@post.created_at) %> Ago
+        <br />
+        Shared <%= time_ago_in_words(@post.created_at) %> Ago
       </p>
   </div>
 </div>
